Fix z-index bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,6 +21,7 @@ a {
   background-color: rgb(49, 54, 65);
   display: flex;
   align-items: center;
+  z-index: 0;
 }
 
 #main-header {
@@ -46,6 +47,7 @@ a {
   -webkit-align-items: center;
   align-items: center;
   justify-content:center;
+  z-index: 2;
 }
 
 #main-footer {
@@ -185,7 +187,7 @@ a {
   top: 50%;
   transform: translate(-50%,-50%);
   fill: rgb(230, 230, 230);
-  z-index: -1;
+  z-index: 1;
 }
 
 .loading-icon {
